--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-name: Angular CI
+name: Angular CI on Windows
 
 on:
   push:
@@ -11,28 +11,22 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      # Step 1: Checkout the source code
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # Step 2: Setup Node environment
-      - name: Use Node.js 18
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      # Step 3: Install dependencies
       - name: Install Dependencies
         run: npm install
 
-      # Step 4: Build Angular App
-        # If your Angular project is in a subfolder, add: cd your-folder
-      - name: Build Angular App
+      - name: Build Angular
         run: npm run build -- --configuration=production
 
-      # Step 5: Upload build artifacts (dist folder)
       - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: angular-dist
           path: dist/
